syntax = "proto3";

package razpravljalnica;

option go_package = "github.com/FilipGjorgjeski/razpravljalnica/protos;razpravljalnica";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
////////////////////////////////////////////////////////////////////////////////
// Basic data types
////////////////////////////////////////////////////////////////////////////////
message User {
  int64 id = 1;
  string name = 2;
}

message Topic {
  int64 id = 1;
  string name = 2;
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 likes = 6;
  bool likedByUser = 7;
  string username = 8;
}

message Like {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who liked the message
}

enum OpType {
  OP_POST   = 0; // add a message to a topic
  OP_LIKE   = 1; // like a message
  OP_DELETE = 2; // delete a message
  OP_UPDATE = 3; // update a message
}

message NodeInfo {
  string node_id = 1;
  string address = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Data plane
////////////////////////////////////////////////////////////////////////////////

service  MessageBoard{
  // Writes (only to head)

  // Creates a new user and assigns it an id
  rpc CreateUser(CreateUserRequest) returns (User);

  // Creates a new topic to which users can post messages
  rpc CreateTopic(CreateTopicRequest) returns (Topic);

  // Post a message to a topic; Succeed only if the User and the Topic exist in the database.
  rpc PostMessage(PostMessageRequest) returns (Message);

  // Update an existing message. Allowed only for the user who posted the message.
  rpc UpdateMessage(UpdateMessageRequest) returns (Message);

  // Delete an existing message. Allowed only for the user who posted the message.
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);

  // Like an existing message. Return the message with the new number of likes.
  rpc LikeMessage(LikeMessageRequest) returns (Message);

  // Request a node to which a subscription can be opened.
  rpc GetSubscriptionNode(SubscriptionNodeRequest) returns (SubscriptionNodeResponse);

  // Reads go to the tail node

  // Returns all the topics
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsResponse);

  // Returns messages in a topic
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Subscribe to topics; goes to the node returned by head
  rpc SubscribeTopic(SubscribeTopicRequest) returns (stream MessageEvent);
  
}

message CreateUserRequest {
  string name = 1;
  string request_id = 2; // idempotency key; client should reuse on retry
}

message CreateTopicRequest {
  string name = 1;
  string request_id = 2; // idempotency key; client should reuse on retry
}

message PostMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string text = 3;
  string request_id = 4; // idempotency key; client should reuse on retry
}

message DeleteMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string request_id = 4; // idempotency key; client should reuse on retry
}

message UpdateMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string text = 4; // new text
  string request_id = 5; // idempotency key; client should reuse on retry
}

message LikeMessageRequest {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3; // user who posted the like
  string request_id = 4; // idempotency key; client should reuse on retry
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message GetMessagesRequest {
  int64 topic_id = 1;
  int64 from_message_id = 2; // starting id of the message (0 from beggining)
  int32 limit = 3; // max number of messages
  int64 user_id = 4; // optional, provides per-message liked status
}
message GetMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeTopicRequest {
  repeated int64 topic_id = 1;
  int64 user_id = 2;
  int64 from_message_id = 3; // starting id of the message
  string subscribe_token = 4; // token generated by the head used to authorize the subscription
}

message SubscriptionNodeRequest {
  int64 user_id = 1;
  repeated int64 topic_id = 2;
}

message SubscriptionNodeResponse {
  string subscribe_token = 1; // subscription token to be presented to the returned node
  NodeInfo node = 2;
}

message MessageEvent {
  int64 sequence_number = 1; // monotonically increasing event number
  OpType op = 2; // type of event
  Message message = 3;
  google.protobuf.Timestamp event_at = 4; // timestamp of the event
}

////////////////////////////////////////////////////////////////////////////////
// Control plane
////////////////////////////////////////////////////////////////////////////////

// Return the the head and the tail node address
service ControlPlane {
  rpc GetClusterState(google.protobuf.Empty) returns (GetClusterStateResponse);

  // Clients can watch for cluster membership/head/tail changes.
  // Server sends the current state immediately and then pushes updates when config_version changes.
  rpc WatchClusterState(WatchClusterStateRequest) returns (stream GetClusterStateResponse);

  // Nodes call this periodically. Response contains current chain membership
  // and this node's role + neighbors.
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);

  // Adds a node to the desired chain (pending activation). Returns current tail for bootstrapping.
  rpc AddNode(AddNodeRequest) returns (AddNodeResponse);

  // Activates a previously added node after it has synced. Appends it to the chain and bumps config_version.
  rpc ActivateNode(ActivateNodeRequest) returns (GetClusterStateResponse);
}

message WatchClusterStateRequest {
  // If set, the server may skip sending updates until config_version > last_seen_config_version.
  int64 last_seen_config_version = 1;
}

message GetClusterStateResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
  repeated NodeInfo chain = 3; // head..tail (best-effort, for debugging/clients)
  int64 config_version = 4;
}

enum ChainRole {
  ROLE_UNKNOWN = 0;
  ROLE_HEAD = 1;
  ROLE_MIDDLE = 2;
  ROLE_TAIL = 3;
}

message NodeStatus {
  int64 last_applied = 1;
  int64 last_committed = 2;
}

message HeartbeatRequest {
  string node_id = 1;
  string address = 2; // node's advertised gRPC address
  NodeStatus status = 3;
}

message HeartbeatResponse {
  int64 config_version = 1;
  ChainRole role = 2;
  NodeInfo head = 3;
  NodeInfo tail = 4;
  NodeInfo predecessor = 5;
  NodeInfo successor = 6;
  repeated NodeInfo chain = 7; // head..tail
}

message AddNodeRequest {
  string node_id = 1;
  string address = 2;
}

message AddNodeResponse {
  NodeInfo current_tail = 1; // nil if no tail exists yet
}

message ActivateNodeRequest {
  string node_id = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Internal replication (node <-> node)
////////////////////////////////////////////////////////////////////////////////

service Replication {
  // Forward a single ordered log entry downstream (head -> ... -> tail).
  rpc Replicate(ReplicateRequest) returns (google.protobuf.Empty);

  // Send acknowledgement upstream (tail -> ... -> head).
  rpc Ack(AckRequest) returns (google.protobuf.Empty);

  // Used for resync after reconfiguration.
  rpc GetEntries(GetEntriesRequest) returns (GetEntriesResponse);

  rpc GetStatus(google.protobuf.Empty) returns (NodeStatus);
}

message LogEntry {
  int64 sequence_number = 1;
  string request_id = 2; // idempotency key for client retries (assigned/propagated by head)
  google.protobuf.Timestamp at = 3;

  oneof op {
    CreateUserOp create_user = 10;
    CreateTopicOp create_topic = 11;
    PostMessageOp post_message = 12;
    UpdateMessageOp update_message = 13;
    DeleteMessageOp delete_message = 14;
    LikeMessageOp like_message = 15;
    RegisterSubscriptionOp register_subscription = 16;
  }
}

message RegisterSubscriptionOp {
  string token = 1;
  int64 user_id = 2;
  repeated int64 topic_id = 3;
  string assigned_node_id = 4;
}

message CreateUserOp {
  int64 user_id = 1;
  string name = 2;
}

message CreateTopicOp {
  int64 topic_id = 1;
  string name = 2;
}

message PostMessageOp {
  int64 message_id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
}

message UpdateMessageOp {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string text = 4;
}

message DeleteMessageOp {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
}

message LikeMessageOp {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3;
}

message ReplicateRequest {
  LogEntry entry = 1;
}

message AckRequest {
  int64 sequence_number = 1;
}

message GetEntriesRequest {
  int64 from_sequence_number = 1; // inclusive
  int32 limit = 2; // server may return fewer
}

message GetEntriesResponse {
  repeated LogEntry entries = 1;
}